--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "datasciencefolio",
+  "name": "panda.github.io",
   "version": "0.1.0",
   "homepage": ".",
   "scripts": {
